--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -31,6 +31,9 @@
         <li class="nav-item">
           <a class="nav-link {{ 'active' if request.path == url_for('main.variant_updater') else '' }}" href="{{ url_for('main.variant_updater') }}">{{ t('variant') }}</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {{ 'active' if request.path == url_for('main.bulk_updater') else '' }}" href="{{ url_for('main.bulk_updater') }}">{{ t('bulk') }}</a>
+        </li>
         {% endif %}
       </ul>
       <ul class="navbar-nav ms-auto">
