--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -21,5 +21,14 @@
       </div>
     </a>
   </div>
+  <div class="col-md-6 col-lg-4">
+    <a href="{{ url_for('main.bulk_updater') }}" class="text-decoration-none text-reset">
+      <div class="card service-card h-100 text-center p-4">
+        <i class="fa-solid fa-boxes-stacked fa-2x mb-3"></i>
+        <h5 class="card-title">{{ t('bulk_card_title') }}</h5>
+        <p class="card-text small">{{ t('bulk_card_desc') }}</p>
+      </div>
+    </a>
+  </div>
 </div>
 {% endblock %}
